# adguardhome-mcp-rs

./: .env.enc  .gitignore  Cargo.toml  Dockerfile  README.md  Taskfile.yml  compose.yaml  config.toml.example
.gemini/commands/: release.toml
.github/workflows/: ci.yml  docker.yml  release.yml
conductor/: product-guidelines.md  product.md  tech-stack.md  tracks.md  workflow.md
conductor/archive/access_control_20260201/: index.md  plan.md  spec.md
conductor/archive/advanced_protection_config_20260201/: plan.md  spec.md
conductor/archive/analytics_summaries_20260201/: index.md  spec.md
conductor/archive/backup_management_20260202/: index.md  plan.md
conductor/archive/backup_restore_enhancements_20260218/: index.md
conductor/archive/client_crud_20260201/: plan.md
conductor/archive/client_management_20260131/: index.md  plan.md
conductor/archive/codebase_cleanup_20260202/: plan.md
conductor/archive/config_files_20260131/: spec.md
conductor/archive/core_skeleton_20260131/: index.md  metadata.json
conductor/archive/coverage_90_coveralls_20260213/: plan.md  spec.md
conductor/archive/custom_rules_20260201/: plan.md
conductor/archive/dhcp_management_20260201/: index.md  plan.md
conductor/archive/dns_config_20260201/: plan.md
conductor/archive/filter_list_crud_complete_20260201/: spec.md
conductor/archive/filtering_debugger_20260201/: index.md  plan.md  spec.md
conductor/archive/filtering_management_20260131/: plan.md  spec.md
conductor/archive/granular_connection_20260131/: index.md  plan.md
conductor/archive/lazy_mode_20260131/: plan.md
conductor/archive/maintenance_tools_20260201/: index.md  plan.md  spec.md
conductor/archive/mcp_optimization_20260215/: spec.md
conductor/archive/monitoring_stats_20260131/: plan.md
conductor/archive/multi_instance_support_20260202/: plan.md
conductor/archive/multi_transport_20260131/: metadata.json
conductor/archive/protection_controls_20260131/: plan.md
conductor/archive/refactor_src_20260202/: index.md
conductor/archive/refactor_tests_20260202/: spec.md
conductor/archive/release_command_20260219/: index.md  plan.md
conductor/archive/restore_management_20260202/: plan.md  spec.md
conductor/archive/restore_system_tools_20260218/: index.md  plan.md  spec.md
conductor/archive/server_operations_20260202/: plan.md  spec.md
conductor/archive/ssl_verification_20260131/: plan.md  spec.md
conductor/archive/system_info_updates_20260201/: index.md
conductor/archive/version_flag_20260202/: spec.md
conductor/tracks/access_control/: plan.md
conductor/tracks/advanced_protection_config/: index.md  plan.md
conductor/tracks/analytics_summaries/: plan.md
conductor/tracks/backup_management_20260202/: spec.md
conductor/tracks/backup_restore_enhancements_20260218/: plan.md  spec.md
conductor/tracks/blocked_services/: index.md  plan.md  spec.md
conductor/tracks/client_crud/: index.md  plan.md  spec.md
src/: adguard.rs  config.rs  error.rs  lib.rs  main.rs  mcp.rs  settings.rs  sync.rs  tools.rs
src/adguard/: client.rs  mod.rs  models.rs  tests.rs
src/server/: http.rs  mcp.rs  mod.rs  tests.rs
src/tools/: clients.rs  dns.rs  filtering.rs  mod.rs  protection.rs  sync.rs  system.rs  tests.rs  unified_tests.rs
tests/: client_tests.rs  dns_tests.rs  docker_integration_test.rs  filtering_tests.rs  main_test.rs  protection_tests.rs  refactor_setup_test.rs  sync_tests.rs  system_tests.rs  transport_tests.rs  version_test.rs
tests/common/: AdGuardHome.yaml  mod.rs
(+80 files in other folders)
