[package]
name = "adguardhome-mcp-rs"
version = "0.1.12"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
axum = "0.8.8"
clap = { version = "4.5.56", features = ["derive", "env"] }
config = { version = "0.15.19", features = ["toml", "yaml", "json"] }
dashmap = "6.1.0"
futures = "0.3.31"
reqwest = { version = "0.13.1", features = ["json", "multipart"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["full"] }
tokio-stream = "0.1.18"
tower-http = { version = "0.6.8", features = ["cors", "trace", "fs"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
url = "2.5.8"
uuid = { version = "1.20.0", features = ["v4", "fast-rng"] }

[dev-dependencies]
http-body-util = "0.1.3"
tempfile = "3.24.0"
testcontainers = "0.26.3"
testcontainers-modules = { version = "0.14.0", features = ["postgres"] }
tower = { version = "0.5.3", features = ["util"] }
wiremock = "0.6.5"

# Profile for final production releases (smaller, faster)
[profile.release]
opt-level = "z"         # Optimize for size
lto = true              # Link Time Optimization (smaller binary)
codegen-units = 1       # Reduce parallel code generation for better optimization
panic = "abort"         # Remove stack unwinding (smaller binary)
strip = true            # Strip symbols (smaller binary)

# Profile for CI/CD builds (inherits from dev)
[profile.ci]
inherits = "dev"
incremental = false     # Disable incremental compilation for CI (often slower/buggy in CI cache)
debug = 0               # No debug info needed for basic CI checks (speeds up build)
